--- a/conditions.html
+++ b/conditions.html
@@ -199,23 +199,11 @@
 		Idx = parIdx(e,-1);
 		load('notes');
 	}
-	function cvt(d,nm,i,nu,m) {
-		if (m[Units[i]]) {
-			d[nm] *= m[Units[i]];
-		}
-		if (m[nu[i]]) {
-			d[nm] /= m[nu[i]];
-		}
-	}
 	function chgUnits(nu) {
 		$.each(Cond,function(i,d) {
-			cvt(d,'flow',0,nu,
-				{MGD:694.4422834,'m^3/hr':4.402867544,'L/s':15.85032316});
-
+			cvt(d,'flow',0,nu,CVT_FLOW);
 			cvt(d,'power_rating',1,nu,{kW:1.341022218});
-
 			cvt(d,'head',2,nu,{m:3.280839895});
-
 		});
 		Units = nu;
 		saveProp('units',Units);
