--- a/index.html
+++ b/index.html
@@ -73,16 +73,18 @@
       function rnd(v) {
         return Math.round(v*10000)/10000;
       }
-      function cvt(d,nm,i,nu,m) {
+      CVT_FLOW = {MGD:694.4422834,'m^3/hr':4.402867544,'L/s':15.85032316, 
+        'm^3/s':15850.32316, 'ft^3/s':448.8311693};
+
+      function cvt(v,i,nu,m) {
         if (m[Units[i]]) {
-          d[nm] *= m[Units[i]];
+          v *= m[Units[i]];
         }
         if (m[nu[i]]) {
-          d[nm] /= m[nu[i]];
+          v /= m[nu[i]];
         }
+        return v;
       }
-      CVT_FLOW = {MGD:694.4422834,'m^3/hr':4.402867544,'L/s':15.85032316}
-
       function cvtUnit(dlg,m) {        
         dlg.data('src').prev().val(rnd(dlg.find('input:not([type=radio])').val()*m));        
         dlg[0].close();
