--- a/headtool.html
+++ b/headtool.html
@@ -144,7 +144,7 @@
 			flowU='ft^3/s';
 			g=32.1740;
 			distF=12;
-        } else {//m
+        } else {
 			flowU='m^3/s';
 			g=9.8065;
 			distF = 1000;
