--- a/headtool.html
+++ b/headtool.html
@@ -160,7 +160,7 @@
 			vHdDif = vHdD - (sucTnk ? 0 : vHdS),
 			sucHd = $('#Ks').val()*vHdS,
 			disHd = $('#Kd').val()*vHdD;
-		Head = elevHd + presHd + vHdDif + sucHd + disHd;
+		Head = elevHd + presHd + vHdDif + sucHd + disHd;debugger;
 		r('elevation',elevHd);
 		r('pressure',presHd);
 		r('velocity',vHdDif);
