--- a/notes.html
+++ b/notes.html
@@ -42,7 +42,7 @@
 	}
 	function save() {
 		if (Idx == Cond.length) {
-			Cond.push(loadProp('defaultCondition'));
+			Cond.push(DefCond);
 		};				
 		$('[name]').each(function(i,e) {
 			Cond[Idx][$(e).attr('name')] = $(e).val();
