--- a/grid.html
+++ b/grid.html
@@ -299,7 +299,7 @@
     switch(parIdx(dlg.find(':checked'))) {
         case 1:
           DefCond = colData(e);
-          saveProp('defaults',DefCond);
+          saveProp('defCond',DefCond);
           break;
         case 2:
           let v;
