--- a/conditions.html
+++ b/conditions.html
@@ -212,7 +212,7 @@
 			cvtObj(d,'power_rating',1,nunits,{kW:1.341022218});
 			cvtObj(d,'head',2,nunits,{m:3.280839895});
 		});
-		saveProp('defaultCondition',DefCond);
+		saveProp('defCond',DefCond);
 		Units = nunits;
 		saveProp('units',Units);
 		saveCond();
