--- a/conditions.html
+++ b/conditions.html
@@ -38,6 +38,9 @@
 	#units label {
 		display: block;
 	}
+	#units select {
+		vertical-align: middle;
+	}
 	.shade {
 		background-color: lightgray;
 	}	
