--- a/conditions.html
+++ b/conditions.html
@@ -130,21 +130,39 @@
 <button onclick='reset()'>RESET</button>
 
 <script>
-	function xprt() {
+	function xprt() {		
 		if (Cond.length==0) {
 			return;//TODO hide btn
 		}
-		const hd=Object.keys(Cond[0]).sort();
-		var txt=0+'\n'+JSON.stringify(Units)+'\n'+hd.join('\t');
-		Cond.forEach(function(d,i) {
-			txt+='\n'+
-				hd.map((nm,i)=> {
-					return d[nm];
-				}).join('\t');
-		});		
-		require('fs').writeFile('hello.tsv',txt);
+		require('electron').remote.dialog.showSaveDialog(
+			{ filters: [{ name: 'text', extensions: ['tsv'] }]},
+			function (fn) {
+				if (fn) {
+					const hd=Object.keys(Cond[0]).sort();
+					var txt=0+'\n'+JSON.stringify(Units)+'\n'+hd.join('\t');
+					Cond.forEach(function(d,i) {
+						txt+='\n'+
+							hd.map((nm,i)=> {
+								return d[nm];
+							}).join('\t');
+					});		
+					require('fs').writeFile(fn,txt);				
+				}
+		}); 
 	}
 	function inprt() {
+
+		const {dialog} = require('electron').remote
+		dialog.showOpenDialog({ filters: [{ name: 'text', extensions: ['tsv'] }]},
+			function (fileNames) {
+				if (fileNames === undefined) return;
+				var fileName = fileNames[0];
+				fs.readFile(fileName, 'utf-8', function (err, data) {
+					document.getElementById("editor").value = data;
+				});
+			}
+		); 
+return;
 		const 
 			fs = require('fs'),
 			lines=fs.readFileSync('hello.tsv','utf8').split('\n'),
