--- a/conditions.html
+++ b/conditions.html
@@ -194,15 +194,16 @@
 							newEl.find('span').text(d.name);     
 							newEl.data('idx',idx);
 						} else {
-							const inp = newEl.find('[name]');
-							const v = d[inp.attr('name')];
-							if (inp.is(':checkbox')) {
-							  dom(inp).checked = v;
-							} else if (inp.is('input')) {
-							  inp.val(rnd(v));
-							} else if (inp.is('select')) {
-							  newEl.find('option')[v].selected = true;
-							}
+							newEl.find('[name]').each((j,e2)=>{
+								const ctl = $(e2), v = d[ctl.attr('name')];
+								if (ctl.is(':checkbox')) {
+								  dom(ctl).checked = v;
+								} else if (ctl.is('input')) {
+								  ctl.val(rnd(v));
+								} else if (ctl.is('select')) {
+								  newEl.find('option')[v].selected = true;
+								}
+							});
 						}
 					});   
 				    pumpEff($('[name=flow]').last());
