--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
             line: 1,
             power_rating: 30,
             motor_rpm: 1780,
-            efficiency: 0,
+            efficiency_class: 0,
+            efficiency:123,
             motor_voltage: 460,
             amps: 225.4,
             margin: 0,
@@ -152,7 +153,7 @@
       Bridge = require('./build/Release/bridge');
       LS = localStorage;
       $ = require('jquery');
-      
+
       if (!loadData()) {
         loadData(true);
       }
