--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         left: 1rem;
         display: none;
       }
+      .hide {
+        display: none;
+      }
     </style>
   </head>
   <body> 
