--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
       } 
       button {
         color: dodgerblue;
+        background-color: white;
+        border: 1px solid lightgray;
+        border-radius: 4px;
+        padding: 3px 6px;
+      }
+      button:hover {
+        border-color: dodgerblue;
       }
       input:not([type=radio]) {
         padding: .5em;
