--- a/conditions.html
+++ b/conditions.html
@@ -127,9 +127,9 @@
     	<button onclick='cp($(this))'><i class="fa fa-plus"></i></button>
     </li>
 </ul>
-<button onclick='nu()'>NEW</button>
+<button class=prime onclick='nu()'>NEW</button>
 <button class=gt0 onclick='removeAll()'>REMOVE ALL</button>
-<button id=grid onclick='grid()'><i class="fa fa-table"></i></button>
+<button class=prime id=grid onclick='grid()'><i class="fa fa-table"></i></button>
 
 <script>
 	function xprt() {		
