--- a/headtool.html
+++ b/headtool.html
@@ -25,7 +25,7 @@
 		color: green;
 		font-weight: bold;
 	}
-	
+
 }
 </style>
 <h1>Head Tool</h1>
@@ -107,8 +107,8 @@
 	<tr>
 		<td/>
 		<td>
-			<button onclick='calc()'>CALCULATE</button>
-			<button id=accept onclick='accept()' style="display: none">ACCEPT</button>
+			<button class=prime onclick='calc()'>CALCULATE</button>
+			<button class=prime id=accept onclick='accept()' style="display: none">ACCEPT</button>
 		</td>
 	</tr>
 </table>
