--- a/notes.html
+++ b/notes.html
@@ -31,7 +31,7 @@
 	Comments<br>
 	<textarea name='comment' rows=10 cols=100/><br>
 </form>
-<button onclick='save()'>SAVE</button>
+<button class=prime onclick='save()'>SAVE</button>
 <script>
 	if (Idx<Cond.length) {
 		$('[name]').each(function(i,e) {
