--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
         border-radius: 4px;
         padding: 3px 6px;
       }
+      button.prime {
+        color: white;
+        background-color: dodgerblue;
+      }     
       button:hover {
         border-color: dodgerblue;
       }
