--- a/grid.html
+++ b/grid.html
@@ -256,7 +256,7 @@
   <label>
     <input name=saveopt type="radio"> Load from Default
   </label>
-  <button onclick='io($(this.parentElement))'>ACCEPT</button> 
+  <button class=prime onclick='io($(this.parentElement))'>ACCEPT</button> 
   <button onclick='this.parentElement.close()'>CANCEL</button>
 </dialog>
 
