--- a/notes.html
+++ b/notes.html
@@ -25,9 +25,9 @@
 	System<br>
 	<input name='system'><br>
 	Application<br>
-	<input><br>
+	<input name='application'><br>
 	Evaluator<br>
-	<input><br>
+	<input name='evaluator'><br>
 	Comments<br>
 	<textarea name='comment' rows=10 cols=100/><br>
 </form>
