--- a/conditions.html
+++ b/conditions.html
@@ -215,8 +215,7 @@
 	function rm(e) {
 		Cond.splice(parIdx(e,-1),1);
 		saveCond();
-		e.parent().remove();
-		setGridBtn();
+		main();
 	}
 	function cp(e) {
 		let o=$.extend({},Cond[parIdx(e,-1)]);
